<resources lang="en-US">
    <string name="app_name">UET Micropump</string>

    <string name="BLE_device_name">MMMMMMMicropump 2024</string>

    <!--Main layout strings -->
    <string name="tvrate">Rate:</string>
    <string name="tvtarget">Target:</string>
    <string name="tvsyringe">Syringe:</string>
    <string name="tvmode">Mode:</string>
    <string name="tvtime_left">Time left:</string>
    <string name="tvrate_unit">Enter rate</string>
    <string name="tvtarget_unit">Enter target</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_continue">Continue</string>
    <string name="button_pause">Pause</string>

    <string name="paused">Paused</string>

    <!--Sub layout strings -->
    <!--Connect button names -->
    <string name="connect">Connect to Micropump</string>
    <string name="connecting">Connecting . . .</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnect">Disconnect</string>

    <!-- Toasts and dialogs  -->
    <string name="enable_bt">Please enable bluetooth</string>

    <string name="scan_failed">Could not initiate scanning</string>
    <string name="no_device">Could not find Micropump, try again</string>
    <string name="no_info">Please enter Rate / Target</string>
    <string name="not_connect">Please connect to Micropump first</string>

    <string name="bluetooth_turned_off">Bluetooth turned off, can\'t continue</string>
    <string name="bluetooth_disconnected">Bluetooth device disconnected, can\'t continue</string>

    <string name="finished_toast">Complete !</string>
    <string name="finished_dialog">Task finished</string>
    <string name="finished_message">The micropump has finished its task!
        \nPressing return will make the mechanism move back to it\'s original position
        \n\n*Please remove the syringe before pressing return
        \n
    </string>
    <string name="finished_return">Return</string>
    <string name="returning">Returning to original position</string>



    <!--Spinner string arrays-->
    <string-array name="rate_units">
        <item>ml/min</item>
        <item>ml/s</item>

        <item>µl/h</item>
        <item>µl/min</item>
        <item>µl/s</item>
    </string-array>

    <string-array name="target_units">
        <item>ml</item>
        <item>µl</item>
    </string-array>

    <string-array name="Syringe_type">
        <item>Standard 1ml</item>
        <item>Standard 3ml</item>
        <item>Standard 5ml</item>
        <item>Standard 10ml</item>
    </string-array>

    <string-array name="Operation_mode">
        <item>Infusing</item>
        <item>Withdrawing</item>

    </string-array>

</resources>